# newsletter

./: Cargo.toml  README.md
migrations/: 20241030071726_create_subscription_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
